fixed wrong colors for skins

--- a/uui/components/typography/Text.module.scss
+++ b/uui/components/typography/Text.module.scss
@@ -17,7 +17,7 @@
 }
 
 .root {
-    --uui-text: var(--uui-color-70);
+    --uui-text: var(--uui-color-50);
     --uui-text-font: var(--uui-font);
     --uui-text-font-weight: 400;
     --uui-text-font-style: normal;
